php stan and auth middlewares added
