# app/Http/Controllers/Auth/AuthController.php
@@ -4,7 +4,10 @@ namespace App\Http\Controllers\Auth;
 
 use App\Actions\LoginAction;
 use App\Config\JwtIssuer;
+use App\Data\Responses\Auth\UserResponse;
 use App\Http\Controllers\Controller;
+use App\Models\User;
+use http\Env\Response;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use Lcobucci\JWT\Signer\Hmac\Sha256;
@@ -12,6 +15,7 @@ use Lcobucci\JWT\Signer\Key\InMemory;
 
 class AuthController extends Controller
 {
+
     private LoginAction $loginAction;
 
     public function __construct(LoginAction $loginAction)
@@ -22,10 +26,10 @@ class AuthController extends Controller
     /**
      * @param Request $request
      * @OA\Post(
-     *     path="/login",
+     *     path="/api/login",
      *     tags={"login"},
      *     operationId="loginUser",
-     *     @OA\Response(
+     *     @OA\Responses(
      *         response=200,
      *         description="Successfuly logged in",
      *     ),
@@ -51,8 +55,74 @@ class AuthController extends Controller
      * )
      * @throws \Exception
      */
-    public function login(Request $request): JsonResponse
+    public function loginAsUser(Request $request): JsonResponse
     {
-        return $this->loginAction->execute($request->all());
+        return $this->loginAction->logUserIn($request->all());
+    }
+
+    /**
+     * @param Request $request
+     * @OA\Post(
+     *     path="/api/v1/admin/login",
+     *     tags={"login"},
+     *     operationId="loginAdmin",
+     *     @OA\Responses(
+     *         response=200,
+     *         description="Successfuly logged in",
+     *     ),
+     *     @OA\RequestBody(
+     *         description="Input data format",
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 @OA\Property(
+     *                     property="email",
+     *                     description="Users email",
+     *                     type="string",
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password",
+     *                     description="Users password",
+     *                     type="string"
+     *                 )
+     *             )
+     *         )
+     *     )
+     * )
+     * @throws \Exception
+     */
+    public function loginAsAdmin(Request $request): JsonResponse
+    {
+        return $this->loginAction->logAdminIn($request->all());
+    }
+
+    /**
+     * @param Request $request
+     * @return JsonResponse
+     * @OA\Get(
+     *     path="/api/me",
+     *     tags={"me"},
+     *     operationId="getMe",
+     *     @OA\Responses(
+     *         response=200,
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(ref="#/components/schemas/User")
+     *          ),
+     *        description="Logged in user attributes",
+     *     ),
+     *     security={
+     *          {"bearer": {}}
+     *     }
+     *)
+     */
+    public function getUser(Request $request): JsonResponse
+    {
+        $user = User::getUserByToken($request->bearerToken());
+        if(!$user) {
+            return response()->json(['message' => 'User not found'], 404);
+        }
+        return response()->json(new UserResponse($user));
     }
 }
